--- a/HeaderFooter.Master
+++ b/HeaderFooter.Master
@@ -8,9 +8,8 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        
-    <script type="text/javascript" src="js/Ajaxrequest.js"></script>
-    <script type="text/javascript" src="js/validator.js"></script>
+    <script type="text/javascript" src="<%=ResolveUrl("~/js/Ajaxrequest.js")%>"></script>
+    <script type="text/javascript" src="<%=ResolveUrl("~/js/validator.js")%>"></script>
     <link href="CSS/cssreciaspx.css" rel="stylesheet" type="text/css" /> 
     <link href="CSS/thickbox.css" rel="stylesheet" type="text/css" />
     <link href="CSS/jquery.datepick.css" rel="stylesheet" type="text/css" />
@@ -20,7 +19,7 @@
     <link href="css/template.css" rel="stylesheet" type="text/css" />
     <link href="css/content.css" rel="stylesheet" type="text/css" />
 
-    <script type="text/javascript" src="js/drop_menu.js"></script>
+    <script type="text/javascript" src="<%=ResolveUrl("~/js/drop_menu.js")%>"></script>
 
     <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.min.js"></script>
 
@@ -41,9 +40,9 @@
 
     </script>
 
-    <script type="text/javascript" src="js/jquery-1.6.1.min.js"></script>
+    <script type="text/javascript" src="<%=ResolveUrl("~/js/jquery-1.6.1.min.js")%>"></script>
 
-    <script type="text/javascript" src="js/jquery.li-scroller.1.0.js"></script>
+    <script type="text/javascript" src="<%=ResolveUrl("~/js/jquery.li-scroller.1.0.js")%>"></script>
 
     <!-- Syntax hl -->
     <link rel="stylesheet" href="css/li-scroller.css" type="text/css" media="screen" />
@@ -59,7 +58,7 @@
 
 </head>
 <body>
-<script type="text/javascript" src="js/wz_tooltip.js"></script>
+<script type="text/javascript" src="<%=ResolveUrl("~/js/wz_tooltip.js")%>"></script>
     <form id="form1" runat="server">
     <div class="wrapper">
         <!-- ===== PAGE DIV START HERE===== -->
