--- a/HeaderFooter.Master
+++ b/HeaderFooter.Master
@@ -5,14 +5,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head runat="server">
     <title>Exam Crazy</title>
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
+    
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script type="text/javascript" src="<%=ResolveUrl("~/js/jquery.min.js")%>"></script>
-    <script type="text/javascript" src="<%=ResolveUrl("~/js/Ajaxrequest.js")%>"></script>
-    <script type="text/javascript" src="<%=ResolveUrl("~/js/validator.js")%>"></script>
-    <script type="text/javascript" src="<%=ResolveUrl("~/js/jquery.timePicker.js")%>"></script>
-    <script type="text/javascript" src="<%=ResolveUrl("~/js/jquery.datepick.js")%>"></script>
+    <script type="text/javascript" src="<%# ResolveUrl("~/js/jquery.min.js")%>"></script>
+    <script type="text/javascript" src="<%# ResolveUrl("~/js/drop_menu.js")%>"></script>
+    <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.min.js"></script>    
     
     <link href="css/grids.css" rel="stylesheet" type="text/css" />
     <link href="css/libraries.css" rel="stylesheet" type="text/css" />
@@ -20,11 +17,10 @@
     <link href="css/template.css" rel="stylesheet" type="text/css" />
     <link href="css/content.css" rel="stylesheet" type="text/css" />
     <link href="CSS/thickbox.css" rel="stylesheet" type="text/css" />
-    
+    <asp:ContentPlaceHolder ID="head" runat="server">
+    </asp:ContentPlaceHolder>
 
-    <script type="text/javascript" src="<%=ResolveUrl("~/js/drop_menu.js")%>"></script>
 
-    <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.min.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function() {
@@ -43,9 +39,9 @@
 
     </script>
 
-    <script type="text/javascript" src="<%=ResolveUrl("~/js/jquery-1.6.1.min.js")%>"></script>
+    <script type="text/javascript" src="<%# ResolveUrl("~/js/jquery-1.6.1.min.js")%>"></script>
 
-    <script type="text/javascript" src="<%=ResolveUrl("~/js/jquery.li-scroller.1.0.js")%>"></script>
+    <script type="text/javascript" src="<%# ResolveUrl("~/js/jquery.li-scroller.1.0.js")%>"></script>
 
     <!-- Syntax hl -->
     <link rel="stylesheet" href="css/li-scroller.css" type="text/css" media="screen" />
@@ -225,6 +221,8 @@
                             <li><span class="icon"></span><a href="#" title="NHPC">Terms and Conditions</a>
                             
                                     
+                                    
+                                    
                                     </li>
                                     <li><span class="icon"></span><a href="#" title="NHPC">Contact us</a> </li>
                                     <li><span class="icon"></span><a href="#" title="NHPC">Site Map</a> </li>
@@ -234,6 +232,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
     </form>
 </body>
 </html>
