--- a/Master.Master
+++ b/Master.Master
@@ -5,22 +5,20 @@
 <head runat="server">
     <title>Exam Crazy</title>
     
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
+      
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script type="text/javascript" src="<%=ResolveUrl("~/js/Ajaxrequest.js")%>"></script>
-    <script type="text/javascript" src="<%=ResolveUrl("~/js/validator.js")%>"></script>
-    <link href="CSS/cssreciaspx.css" rel="stylesheet" type="text/css" /> 
+    <script type="text/javascript" src="<%# ResolveUrl("~/js/jquery.min.js")%>"></script>
+    <script type="text/javascript" src="<%# ResolveUrl("~/js/drop_menu.js")%>"></script>
+    <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.min.js"></script>    
+    
     <link href="css/grids.css" rel="stylesheet" type="text/css" />
     <link href="css/libraries.css" rel="stylesheet" type="text/css" />
     <link href="css/mod.css" rel="stylesheet" type="text/css" />
     <link href="css/template.css" rel="stylesheet" type="text/css" />
     <link href="css/content.css" rel="stylesheet" type="text/css" />
-
-    <script type="text/javascript" src="<%=ResolveUrl("~/js/drop_menu.js")%>"></script>
-
-    <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.min.js"></script>
-
+    <link href="CSS/thickbox.css" rel="stylesheet" type="text/css" />
+    <asp:ContentPlaceHolder ID="head" runat="server">
+    </asp:ContentPlaceHolder>
     <script type="text/javascript">
         $(document).ready(function() {
             $(".main-nav li a.main-link").hover(function() {
@@ -38,9 +36,9 @@
 
     </script>
 
-    <script type="text/javascript" src="<%=ResolveUrl("~/js/jquery-1.6.1.min.js")%>"></script>
+    <script type="text/javascript" src="<%# ResolveUrl("~/js/jquery-1.6.1.min.js")%>"></script>
 
-    <script type="text/javascript" src="<%=ResolveUrl("~/js/jquery.li-scroller.1.0.js")%>"></script>
+    <script type="text/javascript" src="<%# ResolveUrl("~/js/jquery.li-scroller.1.0.js")%>"></script>
 
     <!-- Syntax hl -->
     <link rel="stylesheet" href="css/li-scroller.css" type="text/css" media="screen" />
