--- a/LeftRight.master
+++ b/LeftRight.master
@@ -1,5 +1,6 @@
 ﻿<%@ Master Language="C#" MasterPageFile="~/HeaderFooter.Master" AutoEventWireup="true"
     CodeBehind="LeftRight.master.cs" Inherits="ExamCrazy.LeftRight" %>
+    <%@ MasterType VirtualPath="~/HeaderFooter.master" %>
 
 <%@ Register TagPrefix="ucl" TagName="login" Src="~/Control/Login.ascx" %>
 <asp:Content ID="Content1" ContentPlaceHolderID="head" runat="server">
