default.asxp: replaced by index.aspx
Changed file from default.aspx to index.aspx. This was required for
hosting of gatetutor.in @ india.to

Signed-off-by: NKK <nkk@gmail.com>

--- a/Job.master
+++ b/Job.master
@@ -8,7 +8,7 @@
 </asp:Content>
 <asp:Content ID="Content2" ContentPlaceHolderID="AddToBreadCrum" runat="server">
     <div class="breadCrumsMenu unit">
-        <a class="unit" href="~/default.aspx" title="home" runat="server">Home</a>
+        <a class="unit" href="~/index.aspx" title="home" runat="server">Home</a>
         <asp:ContentPlaceHolder ID="AddToBreadCrum" runat="server">
         </asp:ContentPlaceHolder>
     </div>
